<resources>
    <string name="app_name">IMCApp</string>
    <string name="male_text">Hombre</string>
    <string name="female_text">Mujer</string>
    <string name="text_height">Altura</string>
    <string name="image_male_icon">image_male_icon</string>
    <string name="image_female_icon">image_female_icon</string>
    <string name="text_age">Edad</string>
    <string name="txt_label_age">Edad</string>
    <string name="text_result">Su Resultado es:</string>
    <string name="txt_goto_calculate">Volver a calcular</string>
</resources>